--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,3 @@
-<<<<<<< HEAD
-# Created by https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos,react
-# Edit at https://www.toptal.com/developers/gitignore?templates=node,windows,linux,macos,react
-
-### Linux ###
-*~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
-.nfs*
-
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-### macOS Patch ###
-# iCloud generated files
-*.icloud
-
-### Node ###
-=======
->>>>>>> d1dc0ef4a225ef5a6a3e0e010d9ec409ff658849
 # Logs
 logs
 *.log
@@ -157,10 +102,7 @@ dist
 
 # vuepress v2.x temp and cache directory
 .temp
-<<<<<<< HEAD
-=======
 .cache
->>>>>>> d1dc0ef4a225ef5a6a3e0e010d9ec409ff658849
 
 # Docusaurus cache and generated files
 .docusaurus
@@ -186,56 +128,22 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-<<<<<<< HEAD
 
-### Node Patch ###
-# Serverless Webpack directories
-.webpack/
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
 
-# Optional stylelint cache
+# Local History for Visual Studio Code
+.history/
 
-# SvelteKit build / generate output
-.svelte-kit
+# Built Visual Studio Code Extensions
+*.vsix
 
-### react ###
-.DS_*
-**/*.backup.*
-**/*.back.*
-
-node_modules
-
-*.sublime*
-
-psd
-thumb
-sketch
-
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos,react
-=======
->>>>>>> d1dc0ef4a225ef5a6a3e0e010d9ec409ff658849
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
