--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "Portfolio",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,12 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^4.7.0",
+    "@egjs/react-flicking": "^4.10.9",
+    "antd": "^5.6.2",
     "bootstrap": "^5.3.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-terminal-ui": "^1.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
